Closed Bug 620356 Opened 14 years ago Closed 14 years ago

Uninitialized variable warning in CreateOffscreenPixmapContext

Categories

(Core :: Graphics, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b9

People

(Reporter: Ms2ger, Assigned: Ms2ger)

References

Details

(Whiteboard: [build_warning])

Attachments

(1 file, 1 obsolete file)

Attached patch Patch v1 (obsolete) — Splinter Review
Bug 613079 caused an uninitialized variable warning about glxpixmap.
Flags: in-testsuite-
Attachment #498716 - Flags: review?(bjacob)
Attachment #498716 - Flags: review?(bjacob) → review+
Attachment #498716 - Flags: approval2.0?
Attachment #498716 - Flags: approval2.0? → approval2.0+
Thanks!
Attachment #498716 - Attachment is obsolete: true
Keywords: checkin-needed
http://hg.mozilla.org/mozilla-central/rev/2b1fa6455a73
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b9
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: