Bug 620356 - Fix uninitialized variable warning in CreateOffscreenPixmapContext; r=bjacob a=joedrew